--- a/WabiSabiTeamProject/Feature/AddProduct/View/AddProduct.storyboard
+++ b/WabiSabiTeamProject/Feature/AddProduct/View/AddProduct.storyboard
@@ -22,14 +22,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-yL-tnf">
                                 <rect key="frame" x="157" y="108" width="100" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UAB-ij-Exv">
-                                        <rect key="frame" x="0.0" y="0.5" width="100" height="98"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UAB-ij-Exv">
+                                        <rect key="frame" x="0.0" y="-3" width="100" height="105"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <imageReference key="image" image="camera" catalog="system" symbolScale="default"/>
-                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                        <imageReference key="image" image="camera" catalog="system"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="bold"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                <color key="backgroundColor" red="0.83529411764705885" green="0.81568627450980391" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="UAB-ij-Exv" firstAttribute="leading" secondItem="6IO-yL-tnf" secondAttribute="leading" id="12s-Rk-mKz"/>
                                     <constraint firstAttribute="trailing" secondItem="UAB-ij-Exv" secondAttribute="trailing" id="Gl4-fQ-CNg"/>
@@ -360,9 +360,6 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
