--- a/WabiSabiTeamProject/Feature/Profile/View/ProductTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Profile/View/ProductTableViewCell.xib
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="j71-h2-5mT" firstAttribute="centerY" secondItem="NWv-PI-SL1" secondAttribute="centerY" id="Fuk-VG-lG2"/>
                             <constraint firstItem="j71-h2-5mT" firstAttribute="centerX" secondItem="NWv-PI-SL1" secondAttribute="centerX" id="Qdc-nB-T0T"/>
@@ -36,7 +36,7 @@
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="u2n-NO-fJ2">
-                        <rect key="frame" x="95" y="29.5" width="186.5" height="41.5"/>
+                        <rect key="frame" x="95" y="19" width="186.5" height="62.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cUp-58-ted">
                                 <rect key="frame" x="0.0" y="0.0" width="186.5" height="20.5"/>
@@ -44,8 +44,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add your product" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMN-lO-Rj2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMN-lO-Rj2">
                                 <rect key="frame" x="0.0" y="25.5" width="186.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RaR-Jh-vMm">
+                                <rect key="frame" x="0.0" y="46.5" width="186.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -75,16 +81,15 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="name" destination="cUp-58-ted" id="oSW-46-f2G"/>
+                <outlet property="brand" destination="EMN-lO-Rj2" id="vxo-0t-aje"/>
+                <outlet property="name" destination="RaR-Jh-vMm" id="yls-Sk-xdG"/>
+                <outlet property="type" destination="cUp-58-ted" id="sog-hY-UoO"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="75"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
